--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,16 +16,15 @@
 <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
-	<h2>Hello!</h2>
-	<!-- <div th:switch="${apps}" class="container my-5">
+	<div th:switch="${apps}" class="container my-5">
 		<div class="row">
 			<div class="col-md-6">
-				<h2 th:case="null">Hello!</h2>
-				
-				<p><a href="/users/"><i class="fas fa-user-edit ml-2"></i> Go to </a></p>
+				<h2 th:case="null">Application!</h2>
+				<p><a href="/home/"><i class="fas fa-user-edit ml-2"></i> Go to Admin</a></p>
+				<p><a href="/home/"><i class="fas fa-user-edit ml-2"></i> Go to Operator</a></p>
 				<p><a href="/logout"><i class="fas fa-sign-out-alt ml-2"></i> Log Out</a></p>
 			</div>
 		</div>
-	</div> -->
+	</div>
 </body>
 </html>
