--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,8 +20,8 @@
 		<div class="row">
 			<div class="col-md-6">
 				<h2 th:case="null">Application!</h2>
-				<p><a href="/home/"><i class="fas fa-user-edit ml-2"></i> Go to Admin</a></p>
-				<p><a href="/home/"><i class="fas fa-user-edit ml-2"></i> Go to Operator</a></p>
+				<p><a href="/vendors/"><i class="fas fa-user-edit ml-2"></i> Go to Vendors</a></p>
+				<p><a href="/home/"><i class="fas fa-user-edit ml-2"></i> Go to X</a></p>
 				<p><a href="/logout"><i class="fas fa-sign-out-alt ml-2"></i> Log Out</a></p>
 			</div>
 		</div>
