--- a/src/main/resources/templates/shipmethods/index.html
+++ b/src/main/resources/templates/shipmethods/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Vendors</title>
+    <title>Shipmethods</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -20,12 +20,12 @@
     <link rel="stylesheet" href="../css/shards.min.css" />
   </head>
   <body>
-    <div th:switch="${vendors}" class="container my-5">
+    <div th:switch="${shipmethods}" class="container my-5">
       <div class="row">
         <div class="col-md-10">
-          <h2 th:case="null">No vendors yet!</h2>
+          <h2 th:case="null">No shipmethods yet!</h2>
           <div th:case="*">
-            <h2 class="my-5">Vendors</h2>
+            <h2 class="my-5">Shipmethods</h2>
             <table class="table table-striped table-responsive-md">
               <thead>
                 <tr>
@@ -42,29 +42,29 @@
                 </tr>
               </thead>
               <tbody>
-                <tr th:each="vendor : ${vendors}">
-                  <td class="text-info" th:text="${vendor.businessentityid}"></td>
-                  <td class="text-info" th:text="${vendor.accountnumber}"></td>
-                  <td class="text-info" th:text="${vendor.activeflag}"></td>
-                  <td class="text-info" th:text="${vendor.creditrating}"></td>
-                  <td class="text-info" th:text="${vendor.modifieddate}"></td>
-                  <td class="text-info" th:text="${vendor.name}"></td>
-                  <td class="text-info" th:text="${vendor.preferredvendorstatus}"></td>
-                  <td class="text-info" th:text="${vendor.purchasingwebserviceurl}"></td>
+                <tr th:each="shipmethod : ${shipmethods}">
+                  <td class="text-info" th:text="${shipmethod.businessentityid}"></td>
+                  <td class="text-info" th:text="${shipmethod.accountnumber}"></td>
+                  <td class="text-info" th:text="${shipmethod.activeflag}"></td>
+                  <td class="text-info" th:text="${shipmethod.creditrating}"></td>
+                  <td class="text-info" th:text="${shipmethod.modifieddate}"></td>
+                  <td class="text-info" th:text="${shipmethod.name}"></td>
+                  <td class="text-info" th:text="${shipmethod.preferredvendorstatus}"></td>
+                  <td class="text-info" th:text="${shipmethod.purchasingwebserviceurl}"></td>
                   <td>
                     <a
-                      th:href="@{/vendors/edit/{id}(id=${vendor.businessentityid})}"
+                      th:href="@{/shipmethods/edit/{id}(id=${shipmethod.businessentityid})}"
                       class="btn btn-primary"
                     >
-                      <i class="fas fa-vendor-edit ml-2"></i>
+                      <i class="fas fa-shipmethod-edit ml-2"></i>
                     </a>
                   </td>
                   <td>
                     <a
-                      th:href="@{/vendors/del/{id}(id=${vendor.businessentityid})}"
+                      th:href="@{/shipmethods/del/{id}(id=${shipmethod.businessentityid})}"
                       class="btn btn-primary"
                     >
-                      <i class="fas fa-vendor-times ml-2"></i>
+                      <i class="fas fa-shipmethod-times ml-2"></i>
                     </a>
                   </td>
                 </tr>
@@ -72,8 +72,8 @@
             </table>
           </div>
           <p class="my-5">
-            <a href="/vendors/add" class="btn btn-primary">
-              <i class="fas fa-vendor-plus ml-2"></i>
+            <a href="/shipmethods/add" class="btn btn-primary">
+              <i class="fas fa-shipmethod-plus ml-2"></i>
             </a>
           </p>
           <p class="my-5">
