--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,10 +25,20 @@
         <div class="col-md-6">
           <h2 th:case="null">Application!</h2>
           <p>
-            <a href="/vendors/"><i class="fas fa-user-edit ml-2"></i> Go to Vendors</a>
+            <a href="/vendors"><i class="fas fa-user-edit ml-2"></i> Go to Vendors</a>
           </p>
           <p>
-            <a href="/shipmethods/"><i class="fas fa-truck ml-2"></i> Go to Shipmethods</a>
+            <a href="/shipmethods"><i class="fas fa-truck ml-2"></i> Go to Shipmethods</a>
+          </p>
+          <p>
+            <a href="/purchaseorderheaders"
+              ><i class="fas fa-file-contract ml-2"></i> Go to Purchase Order Headers</a
+            >
+          </p>
+          <p>
+            <a href="/purchaseorderdetails"
+              ><i class="fas fa-file-alt ml-2"></i> Go to Purchase Order Details</a
+            >
           </p>
           <p>
             <a href="/logout"><i class="fas fa-sign-out-alt ml-2"></i> Log Out</a>
