--- a/src/main/resources/templates/purchaseorderdetails/index.html
+++ b/src/main/resources/templates/purchaseorderdetails/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Vendors</title>
+    <title>Purchase Order Headers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -20,40 +20,40 @@
     <link rel="stylesheet" href="../css/shards.min.css" />
   </head>
   <body>
-    <div th:switch="${vendors}" class="container my-5">
+    <div th:switch="${purchaseorderdetails}" class="container my-5">
       <div class="row">
         <div class="col-md-10">
-          <h2 th:case="null">No vendors yet!</h2>
+          <h2 th:case="null">No purchase order details yet!</h2>
           <div th:case="*">
-            <h2 class="my-5">Vendors</h2>
+            <h2 class="my-5">Purchase Order Details</h2>
             <table class="table table-striped table-responsive-md">
               <thead>
                 <tr>
                   <th>Id</th>
-                  <th>Account</th>
-                  <th>Status</th>
-                  <th>Credit</th>
+                  <th>Due Date</th>
                   <th>Modified Date</th>
-                  <th>Name</th>
-                  <th>Prefered Status</th>
-                  <th>Web</th>
+                  <th>Order Quantity</th>
+                  <th>Product Id</th>
+                  <th>Received Quantity</th>
+                  <th>Rejected Quantity</th>
+                  <th>Unitprice</th>
                   <th>Edit</th>
                   <th>Delete</th>
                 </tr>
               </thead>
               <tbody>
-                <tr th:each="vendor : ${vendors}">
-                  <td class="text-info" th:text="${vendor.businessentityid}"></td>
-                  <td class="text-info" th:text="${vendor.accountnumber}"></td>
-                  <td class="text-info" th:text="${vendor.activeflag}"></td>
-                  <td class="text-info" th:text="${vendor.creditrating}"></td>
-                  <td class="text-info" th:text="${vendor.modifieddate}"></td>
-                  <td class="text-info" th:text="${vendor.name}"></td>
-                  <td class="text-info" th:text="${vendor.preferredvendorstatus}"></td>
-                  <td class="text-info" th:text="${vendor.purchasingwebserviceurl}"></td>
+                <tr th:each="purchaseorderdetail : ${purchaseorderdetails}">
+                  <td class="text-info" th:text="${purchaseorderdetail.id}"></td>
+                  <td class="text-info" th:text="${purchaseorderdetail.duedate}"></td>
+                  <td class="text-info" th:text="${purchaseorderdetail.modifieddate}"></td>
+                  <td class="text-info" th:text="${purchaseorderdetail.orderqty}"></td>
+                  <td class="text-info" th:text="${purchaseorderdetail.productid}"></td>
+                  <td class="text-info" th:text="${purchaseorderdetail.receivedqty}"></td>
+                  <td class="text-info" th:text="${purchaseorderdetail.rejectedqty}"></td>
+                  <td class="text-info" th:text="${purchaseorderdetail.unitprice}"></td>
                   <td>
                     <a
-                      th:href="@{/vendors/edit/{id}(id=${vendor.businessentityid})}"
+                      th:href="@{/purchaseorderdetails/edit/{id}(id=${purchaseorderdetail.id})}"
                       class="btn btn-primary"
                     >
                       <i class="fas fa-edit ml-2"></i>
@@ -61,7 +61,7 @@
                   </td>
                   <td>
                     <a
-                      th:href="@{/vendors/del/{id}(id=${vendor.businessentityid})}"
+                      th:href="@{/purchaseorderdetails/del/{id}(id=${purchaseorderdetail.id})}"
                       class="btn btn-primary"
                     >
                       <i class="fas fa-trash-alt ml-2"></i>
@@ -72,7 +72,7 @@
             </table>
           </div>
           <p class="my-5">
-            <a href="/vendors/add" class="btn btn-primary">
+            <a href="/purchaseorderdetails/add" class="btn btn-primary">
               <i class="fas fa-plus ml-2"></i>
             </a>
           </p>
