--- a/src/main/resources/templates/purchaseorderheaders/index.html
+++ b/src/main/resources/templates/purchaseorderheaders/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Vendors</title>
+    <title>Purchase Order Headers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -20,40 +20,44 @@
     <link rel="stylesheet" href="../css/shards.min.css" />
   </head>
   <body>
-    <div th:switch="${vendors}" class="container my-5">
+    <div th:switch="${purchaseorderheaders}" class="container my-5">
       <div class="row">
         <div class="col-md-10">
-          <h2 th:case="null">No vendors yet!</h2>
+          <h2 th:case="null">No purchase order headers yet!</h2>
           <div th:case="*">
-            <h2 class="my-5">Vendors</h2>
+            <h2 class="my-5">Purchase Order Headers</h2>
             <table class="table table-striped table-responsive-md">
               <thead>
                 <tr>
                   <th>Id</th>
-                  <th>Account</th>
-                  <th>Status</th>
-                  <th>Credit</th>
+                  <th>Employee Id</th>
+                  <th>Freight</th>
                   <th>Modified Date</th>
-                  <th>Name</th>
-                  <th>Prefered Status</th>
-                  <th>Web</th>
+                  <th>Order Date</th>
+                  <th>Revision Number</th>
+                  <th>Ship Date</th>
+                  <th>Status</th>
+                  <th>Subtotal</th>
+                  <th>Tax (AMT)</th>
                   <th>Edit</th>
                   <th>Delete</th>
                 </tr>
               </thead>
               <tbody>
-                <tr th:each="vendor : ${vendors}">
-                  <td class="text-info" th:text="${vendor.businessentityid}"></td>
-                  <td class="text-info" th:text="${vendor.accountnumber}"></td>
-                  <td class="text-info" th:text="${vendor.activeflag}"></td>
-                  <td class="text-info" th:text="${vendor.creditrating}"></td>
-                  <td class="text-info" th:text="${vendor.modifieddate}"></td>
-                  <td class="text-info" th:text="${vendor.name}"></td>
-                  <td class="text-info" th:text="${vendor.preferredvendorstatus}"></td>
-                  <td class="text-info" th:text="${vendor.purchasingwebserviceurl}"></td>
+                <tr th:each="purchaseorderheader : ${purchaseorderheaders}">
+                  <td class="text-info" th:text="${purchaseorderheader.purchaseorderid}"></td>
+                  <td class="text-info" th:text="${purchaseorderheader.employeeid}"></td>
+                  <td class="text-info" th:text="${purchaseorderheader.freight}"></td>
+                  <td class="text-info" th:text="${purchaseorderheader.modifieddate}"></td>
+                  <td class="text-info" th:text="${purchaseorderheader.orderdate}"></td>
+                  <td class="text-info" th:text="${purchaseorderheader.revisionnumber}"></td>
+                  <td class="text-info" th:text="${purchaseorderheader.shipdate}"></td>
+                  <td class="text-info" th:text="${purchaseorderheader.status}"></td>
+                  <td class="text-info" th:text="${purchaseorderheader.subtotal}"></td>
+                  <td class="text-info" th:text="${purchaseorderheader.taxamt}"></td>
                   <td>
                     <a
-                      th:href="@{/vendors/edit/{id}(id=${vendor.businessentityid})}"
+                      th:href="@{/purchaseorderheaders/edit/{id}(id=${purchaseorderheader.purchaseorderid})}"
                       class="btn btn-primary"
                     >
                       <i class="fas fa-edit ml-2"></i>
@@ -61,7 +65,7 @@
                   </td>
                   <td>
                     <a
-                      th:href="@{/vendors/del/{id}(id=${vendor.businessentityid})}"
+                      th:href="@{/purchaseorderheaders/del/{id}(id=${purchaseorderheader.purchaseorderid})}"
                       class="btn btn-primary"
                     >
                       <i class="fas fa-trash-alt ml-2"></i>
@@ -72,7 +76,7 @@
             </table>
           </div>
           <p class="my-5">
-            <a href="/vendors/add" class="btn btn-primary">
+            <a href="/purchaseorderheaders/add" class="btn btn-primary">
               <i class="fas fa-plus ml-2"></i>
             </a>
           </p>
