--- a/src/main/resources/templates/shipmethods/update-shipmethod.html
+++ b/src/main/resources/templates/shipmethods/update-shipmethod.html
@@ -20,10 +20,25 @@
           <form
             action="#"
             th:object="${shipmethod}"
-            th:action="@{/shipmethods/edit/{id}(id=${shipmethod.businessentityid})}"
+            th:action="@{/shipmethods/edit/{id}(id=${shipmethod.shipmethodid})}"
             method="post"
           >
             <div class="row">
+              <div class="form-group col-md-6">
+                <label for="shipmethodid" class="col-form-label">Id</label>
+                <input
+                  type="number"
+                  th:field="*{shipmethodid}"
+                  class="form-control"
+                  id="shipmethodid"
+                  placeholder="0"
+                />
+                <span
+                  th:if="${#fields.hasErrors('shipmethodid')}"
+                  th:errors="*{shipmethodid}"
+                  class="text-danger"
+                ></span>
+              </div>
               <div class="form-group col-md-6">
                 <label for="name" class="col-form-label">Name</label>
                 <input
@@ -42,7 +57,7 @@
               <div class="form-group col-md-6">
                 <label for="rowguid" class="col-form-label">Rowguid</label>
                 <input
-                  type="number"
+                  type="text"
                   th:field="*{rowguid}"
                   class="form-control"
                   id="rowguid"
@@ -55,9 +70,10 @@
                 ></span>
               </div>
               <div class="form-group col-md-6">
-                <label for="shipbase" class="col-form-label">Shipbase</label>
+                <label for="shipbase" class="col-form-label">Ship Base</label>
                 <input
                   type="number"
+                  step="0.1"
                   th:field="*{shipbase}"
                   class="form-control"
                   id="shipbase"
@@ -70,9 +86,10 @@
                 ></span>
               </div>
               <div class="form-group col-md-6">
-                <label for="shiprate" class="col-form-label">Shiprate</label>
+                <label for="shiprate" class="col-form-label">Ship Rate</label>
                 <input
-                  type="shiprate"
+                  type="number"
+                  step="0.1"
                   th:field="*{shiprate}"
                   class="form-control"
                   id="shiprate"
@@ -87,7 +104,7 @@
             </div>
             <div class="row">
               <div class="col-md-4 mt-3">
-                <input type="submit" name="action" class="btn btn-primary" value="Update User" />
+                <input type="submit" name="action" class="btn btn-primary" value="Update" />
               </div>
               <div class="col-md-3 mt-3">
                 <input type="reset" class="btn btn-secondary" value="Clear" />
