--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+>
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Users</title>
+    <title>Application</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -23,19 +26,19 @@
     <div th:switch="${apps}" class="container my-5">
       <div class="row">
         <div class="col-md-6">
-          <h2 th:case="null">Application!</h2>
-          <p>
+          <h2 th:case="null">Menu</h2>
+          <p sec:authorize="hasRole('ADMIN')">
             <a href="/vendors"><i class="fas fa-user-edit ml-2"></i> Go to Vendors</a>
           </p>
-          <p>
+          <p sec:authorize="hasRole('ADMIN')">
             <a href="/shipmethods"><i class="fas fa-truck ml-2"></i> Go to Shipmethods</a>
           </p>
-          <p>
+          <p sec:authorize="hasRole('OPERATOR')">
             <a href="/purchaseorderheaders"
               ><i class="fas fa-file-contract ml-2"></i> Go to Purchase Order Headers</a
             >
           </p>
-          <p>
+          <p sec:authorize="hasRole('OPERATOR')">
             <a href="/purchaseorderdetails"
               ><i class="fas fa-file-alt ml-2"></i> Go to Purchase Order Details</a
             >
