--- a/src/main/resources/templates/purchaseorderdetails/add-purchaseorderdetail.html
+++ b/src/main/resources/templates/purchaseorderdetails/add-purchaseorderdetail.html
@@ -26,15 +26,38 @@
         <div class="col-md-6">
           <form
             action="#"
-            th:action="@{/purchaseorderheaders/add/}"
-            th:object="${purchaseorderheader}"
+            th:action="@{/purchaseorderdetails/add/}"
+            th:object="${purchaseorderdetail}"
             method="post"
           >
             <div class="row">
               <div class="form-group col-md-6">
+                <label for="id" class="col-form-label">PK</label>
+                <div></div>
+                <select th:field="*{id}" th:disabled="disabled">
+                  <option th:value="${pk}" th:text="${pk}" class="form-control"></option>
+                </select>
+              </div>
+              <div class="form-group col-md-6">
                 <label for="id" class="col-form-label">Id</label>
                 <div></div>
-                <select th:field="*{id}">
+                <input
+                  type="number"
+                  th:field="${pk.purchaseorderdetailid}"
+                  class="form-control"
+                  id="duedate"
+                  placeholder="0"
+                />
+                <span
+                  th:if="${#fields.hasErrors('id')}"
+                  th:errors="*{id}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="id" class="col-form-label">Purhcase Order Header Id</label>
+                <div></div>
+                <select th:field="${pk.purchaseorderid}">
                   <option value="" th:text="-Select-"></option>
                   <option
                     th:each="p : ${purchaseorderheaders}"
