--- a/src/main/resources/templates/purchaseorderdetails/add-purchaseorderdetail.html
+++ b/src/main/resources/templates/purchaseorderdetails/add-purchaseorderdetail.html
@@ -34,9 +34,13 @@
               <div class="form-group col-md-6">
                 <label for="id" class="col-form-label">PK</label>
                 <div></div>
-                <select th:field="*{id}" th:disabled="disabled">
-                  <option th:value="${pk}" th:text="${pk}" class="form-control"></option>
-                </select>
+                <input
+                  type="checkbox"
+                  th:field="*{id}"
+                  th:value="${pk}"
+                  class="form-control"
+                  id="duedate"
+                />
               </div>
               <div class="form-group col-md-6">
                 <label for="id" class="col-form-label">Id</label>
