--- a/src/main/resources/templates/purchaseorderdetails/add-purchaseorderdetail.html
+++ b/src/main/resources/templates/purchaseorderdetails/add-purchaseorderdetail.html
@@ -32,17 +32,6 @@
           >
             <div class="row">
               <div class="form-group col-md-6">
-                <label for="id" class="col-form-label">PK</label>
-                <div></div>
-                <input
-                  type="checkbox"
-                  th:field="*{id}"
-                  th:value="${pk}"
-                  class="form-control"
-                  id="duedate"
-                />
-              </div>
-              <div class="form-group col-md-6">
                 <label for="id" class="col-form-label">Id</label>
                 <div></div>
                 <input
@@ -59,7 +48,7 @@
                 ></span>
               </div>
               <div class="form-group col-md-6">
-                <label for="id" class="col-form-label">Purhcase Order Header Id</label>
+                <label for="id" class="col-form-label">Purchase Order Header Id</label>
                 <div></div>
                 <select th:field="${pk.purchaseorderid}">
                   <option value="" th:text="-Select-"></option>
