--- a/src/main/resources/templates/purchaseorderdetails/update-purchaseorderdetail.html
+++ b/src/main/resources/templates/purchaseorderdetails/update-purchaseorderdetail.html
@@ -27,7 +27,23 @@
               <div class="form-group col-md-6">
                 <label for="id" class="col-form-label">Id</label>
                 <div></div>
-                <select th:field="*{id}">
+                <input
+                  type="number"
+                  th:field="*{id.purchaseorderdetailid}"
+                  class="form-control"
+                  id="duedate"
+                  placeholder="0"
+                />
+                <span
+                  th:if="${#fields.hasErrors('id')}"
+                  th:errors="*{id}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="id" class="col-form-label">Purchase Order Header Id</label>
+                <div></div>
+                <select th:field="*{id.purchaseorderid}">
                   <option value="" th:text="-Select-"></option>
                   <option
                     th:each="p : ${purchaseorderheaders}"
