--- a/src/main/resources/templates/billofmaterial/index.html
+++ b/src/main/resources/templates/billofmaterial/index.html
@@ -20,40 +20,34 @@
     <link rel="stylesheet" href="../css/shards.min.css" />
   </head>
   <body>
-    <div th:switch="${purchaseorderdetails}" class="container my-5">
+    <div th:switch="${billofmaterial}" class="container my-5">
       <div class="row">
         <div class="col-md-10">
-          <h2 th:case="null">No purchase order details yet!</h2>
+          <h2 th:case="null">No Bill of Materials yet!</h2>
           <div th:case="*">
-            <h2 class="my-5">Purchase Order Details</h2>
+            <h2 class="my-5">Bill of Material</h2>
             <table class="table table-striped table-responsive-md">
               <thead>
                 <tr>
                   <th>Id</th>
-                  <th>Due Date</th>
+                  <th>Bom Level</th>
+                  <th>End Date</th>
                   <th>Modified Date</th>
-                  <th>Order Quantity</th>
-                  <th>Product Id</th>
-                  <th>Received Quantity</th>
-                  <th>Rejected Quantity</th>
-                  <th>Unitprice</th>
-                  <th>Edit</th>
-                  <th>Delete</th>
+                  <th>Perassembly qty</th>
+                  <th>Start Date</th>
                 </tr>
               </thead>
               <tbody>
-                <tr th:each="purchaseorderdetail : ${purchaseorderdetails}">
-                  <td class="text-info" th:text="${purchaseorderdetail.id}"></td>
-                  <td class="text-info" th:text="${purchaseorderdetail.duedate}"></td>
-                  <td class="text-info" th:text="${purchaseorderdetail.modifieddate}"></td>
-                  <td class="text-info" th:text="${purchaseorderdetail.orderqty}"></td>
-                  <td class="text-info" th:text="${purchaseorderdetail.productid}"></td>
-                  <td class="text-info" th:text="${purchaseorderdetail.receivedqty}"></td>
-                  <td class="text-info" th:text="${purchaseorderdetail.rejectedqty}"></td>
-                  <td class="text-info" th:text="${purchaseorderdetail.unitprice}"></td>
+                <tr th:each="billofmaterials : ${billofmaterials}">
+                  <td class="text-info" th:text="${billofmaterial.billofmaterialsid}"></td>
+                  <td class="text-info" th:text="${billofmaterial.bomlevel}"></td>
+                  <td class="text-info" th:text="${billofmaterial.enddate}"></td>
+                  <td class="text-info" th:text="${billofmaterial.modifieddate}"></td>
+                  <td class="text-info" th:text="${billofmaterial.perassemblyqty}"></td>
+                  <td class="text-info" th:text="${billofmaterial.startdate}"></td>
                   <td>
                     <a
-                      th:href="@{/purchaseorderdetails/edit/{id}(id=${purchaseorderdetail.id})}"
+                      th:href="@{/billofmaterial/edit/{id}(id=${billofmaterial.billofmaterialsid})}"
                       class="btn btn-primary"
                     >
                       <i class="fas fa-edit ml-2"></i>
@@ -61,7 +55,7 @@
                   </td>
                   <td>
                     <a
-                      th:href="@{/purchaseorderdetails/del/{id}(id=${purchaseorderdetail.id})}"
+                      th:href="@{/billofmaterial/del/{id}(id=${billofmaterial.billofmaterialsid})}"
                       class="btn btn-primary"
                     >
                       <i class="fas fa-trash-alt ml-2"></i>
