Avances rest y templates

--- a/src/main/resources/templates/billofmaterials/add-billofmaterial.html
+++ b/src/main/resources/templates/billofmaterials/add-billofmaterial.html
@@ -36,7 +36,7 @@
                 <div></div>
                 <input
                   type="number"
-                  th:field="${billofmaterialsid}"
+                  th:field="*{billofmaterialsid}"
                   class="form-control"
                   id="billofmaterialsid"
                   placeholder="0"
