--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,6 +43,26 @@
               ><i class="fas fa-file-alt ml-2"></i> Go to Purchase Order Details</a
             >
           </p>
+          <p>
+            <a href="/products"
+              ><i class="fas fa-file-alt ml-2"></i> Go to Products</a
+            >
+          </p>
+          <p>
+            <a href="/productreviews"
+              ><i class="fas fa-file-alt ml-2"></i> Go to Product Reviews</a
+            >
+          </p>
+          <p>
+            <a href="/billofmaterials"
+              ><i class="fas fa-file-alt ml-2"></i> Go to Bill of Materials</a
+            >
+          </p>
+          <p>
+            <a href="/queries"
+              ><i class="fas fa-file-alt ml-2"></i> Go to Queries</a
+            >
+          </p>
         </div>
       </div>
     </div>
