--- a/src/main/resources/templates/products/add-product.html
+++ b/src/main/resources/templates/products/add-product.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Add Purchase Order Header</title>
+    <title>Add Product</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -21,85 +21,20 @@
   </head>
   <body>
     <div class="container my-5">
-      <h2 class="mb-5">New Purchase Order Header</h2>
+      <h2 class="mb-5">New Product</h2>
       <div class="row">
         <div class="col-md-6">
           <form
             action="#"
-            th:action="@{/purchaseorderdetails/add/}"
-            th:object="${purchaseorderdetail}"
+            th:action="@{/product/add/}"
+            th:object="${product}"
             method="post"
           >
             <div class="row">
               <div class="form-group col-md-6">
-                <label for="id" class="col-form-label">Id</label>
-                <div></div>
+                <label for="productreviewid" class="col-form-label">Id</label>
                 <input
                   type="number"
-                  th:field="${pk.purchaseorderdetailid}"
-                  class="form-control"
-                  id="duedate"
-                  placeholder="0"
-                />
-                <span
-                  th:if="${#fields.hasErrors('id')}"
-                  th:errors="*{id}"
-                  class="text-danger"
-                ></span>
-              </div>
-              <div class="form-group col-md-6">
-                <label for="id" class="col-form-label">Purchase Order Header Id</label>
-                <div></div>
-                <select th:field="${pk.purchaseorderid}">
-                  <option value="" th:text="-Select-"></option>
-                  <option
-                    th:each="p : ${purchaseorderheaders}"
-                    th:value="${p.purchaseorderid}"
-                    th:text="${p.purchaseorderid}"
-                    class="form-control"
-                  ></option>
-                </select>
-                <span
-                  th:if="${#fields.hasErrors('id')}"
-                  th:errors="*{id}"
-                  class="text-danger"
-                ></span>
-              </div>
-              <div class="form-group col-md-6">
-                <label for="duedate" class="col-form-label">Due Date</label>
-                <input
-                  type="date"
-                  th:field="*{duedate}"
-                  class="form-control"
-                  id="duedate"
-                  placeholder="Date"
-                />
-                <span
-                  th:if="${#fields.hasErrors('duedate')}"
-                  th:errors="*{duedate}"
-                  class="text-danger"
-                ></span>
-              </div>
-              <div class="form-group col-md-6">
-                <label for="orderqty" class="col-form-label">Order Quantity</label>
-                <input
-                  type="number"
-                  th:field="*{orderqty}"
-                  class="form-control"
-                  id="orderqty"
-                  placeholder="1"
-                />
-                <span
-                  th:if="${#fields.hasErrors('orderqty')}"
-                  th:errors="*{orderqty}"
-                  class="text-danger"
-                ></span>
-              </div>
-              <div class="form-group col-md-6">
-                <label for="productid" class="col-form-label">Product Id</label>
-                <input
-                  type="number"
-                  step="0"
                   th:field="*{productid}"
                   class="form-control"
                   id="productid"
@@ -112,50 +47,122 @@
                 ></span>
               </div>
               <div class="form-group col-md-6">
-                <label for="receivedqty" class="col-form-label">Received Quantity</label>
+                <label for="name" class="col-form-label">Name</label>
                 <input
-                  type="number"
-                  step="0.1"
-                  th:field="*{receivedqty}"
+                  type="text"
+                  th:field="*{name}"
                   class="form-control"
-                  id="receivedqty"
-                  placeholder="0.1"
+                  id="name"
+                  placeholder="name"
                 />
                 <span
-                  th:if="${#fields.hasErrors('receivedqty')}"
-                  th:errors="*{receivedqty}"
+                  th:if="${#fields.hasErrors('name')}"
+                  th:errors="*{name}"
                   class="text-danger"
                 ></span>
               </div>
               <div class="form-group col-md-6">
-                <label for="rejectedqty" class="col-form-label">Rejected Quantity</label>
+                <label for="color" class="col-form-label">Color</label>
                 <input
-                  type="number"
-                  step="0.1"
-                  th:field="*{rejectedqty}"
+                  type="text"
+                  th:field="*{color}"
                   class="form-control"
-                  id="rejectedqty"
-                  placeholder="0.1"
+                  id="rating"
+                  placeholder="color"
                 />
                 <span
-                  th:if="${#fields.hasErrors('rejectedqty')}"
-                  th:errors="*{rejectedqty}"
+                  th:if="${#fields.hasErrors('color')}"
+                  th:errors="*{color}"
                   class="text-danger"
                 ></span>
               </div>
               <div class="form-group col-md-6">
-                <label for="unitprice" class="col-form-label">Unit Price</label>
+                <label for="productline" class="col-form-label">Porduct Line</label>
                 <input
-                  type="number"
-                  step="0.1"
-                  th:field="*{unitprice}"
+                  type="text"
+                  th:field="*{productline}"
                   class="form-control"
-                  id="unitprice"
-                  placeholder="0.1"
+                  id="productline"
+                  placeholder="productline"
                 />
                 <span
-                  th:if="${#fields.hasErrors('unitprice')}"
-                  th:errors="*{unitprice}"
+                  th:if="${#fields.hasErrors('productline')}"
+                  th:errors="*{productline}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="size" class="col-form-label">Size</label>
+                <input
+                  type="size"
+                  th:field="*{size}"
+                  class="form-control"
+                  id="size"
+                  placeholder="size"
+                />
+                <span
+                  th:if="${#fields.hasErrors('size')}"
+                  th:errors="*{size}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="listprice" class="col-form-label">List Price</label>
+                <input
+                  type="number"
+                  th:field="*{listprice}"
+                  class="form-control"
+                  id="listprice"
+                  placeholder="listprice"
+                />
+                <span
+                  th:if="${#fields.hasErrors('listprice')}"
+                  th:errors="*{listprice}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="discontinueddate" class="col-form-label">Discontinued Date</label>
+                <input
+                  type="date"
+                  th:field="*{discontinueddate}"
+                  class="form-control"
+                  id="discontinueddate"
+                  placeholder="Date"
+                />
+                <span
+                  th:if="${#fields.hasErrors('discontinueddate')}"
+                  th:errors="*{discontinueddate}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="sellstartdate" class="col-form-label">Sell Start Date </label>
+                <input
+                  type="date"
+                  th:field="*{sellstartdate}"
+                  class="form-control"
+                  id="sellstartdate"
+                  placeholder="Date"
+                />
+                <span
+                  th:if="${#fields.hasErrors('sellstartdate')}"
+                  th:errors="*{sellstartdate}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="sellenddate" class="col-form-label">Sell End Date </label>
+                <input
+                  type="date"
+                  th:field="*{sellenddate}"
+                  class="form-control"
+                  id="sellenddate"
+                  placeholder="Date"
+                />
+                <span
+                  th:if="${#fields.hasErrors('sellenddate')}"
+                  th:errors="*{sellenddate}"
                   class="text-danger"
                 ></span>
               </div>
