--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,6 @@
       integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/shards.min.css" />
   </head>
   <body>
     <div th:switch="${apps}" class="container my-5">
@@ -44,14 +43,10 @@
             >
           </p>
           <p>
-            <a href="/products"
-              ><i class="fas fa-file-alt ml-2"></i> Go to Products</a
-            >
+            <a href="/products"><i class="fas fa-file-alt ml-2"></i> Go to Products</a>
           </p>
           <p>
-            <a href="/productreviews"
-              ><i class="fas fa-file-alt ml-2"></i> Go to Product Reviews</a
-            >
+            <a href="/productreviews"><i class="fas fa-file-alt ml-2"></i> Go to Product Reviews</a>
           </p>
           <p>
             <a href="/billofmaterials"
@@ -59,9 +54,7 @@
             >
           </p>
           <p>
-            <a href="/queries"
-              ><i class="fas fa-file-alt ml-2"></i> Go to Queries</a
-            >
+            <a href="/queries"><i class="fas fa-file-alt ml-2"></i> Go to Queries</a>
           </p>
         </div>
       </div>
