--- a/src/main/resources/templates/products/add-product.html
+++ b/src/main/resources/templates/products/add-product.html
@@ -17,19 +17,13 @@
       integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/shards.min.css" />
   </head>
   <body>
     <div class="container my-5">
       <h2 class="mb-5">New Product</h2>
       <div class="row">
         <div class="col-md-6">
-          <form
-            action="#"
-            th:action="@{/product/add/}"
-            th:object="${product}"
-            method="post"
-          >
+          <form action="#" th:action="@{/product/add/}" th:object="${product}" method="post">
             <div class="row">
               <div class="form-group col-md-6">
                 <label for="productreviewid" class="col-form-label">Id</label>
