--- a/src/main/resources/templates/billofmaterials/add-billofmaterial.html
+++ b/src/main/resources/templates/billofmaterials/add-billofmaterial.html
@@ -17,7 +17,6 @@
       integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/shards.min.css" />
   </head>
   <body>
     <div class="container my-5">
@@ -26,7 +25,7 @@
         <div class="col-md-6">
           <form
             action="#"
-            th:action="@{/billofmaterial/add/}"
+            th:action="@{/billofmaterials/add/}"
             th:object="${billofmaterial}"
             method="post"
           >
@@ -63,6 +62,21 @@
                 ></span>
               </div>
               <div class="form-group col-md-6">
+                <label for="startdate" class="col-form-label">Start Date</label>
+                <input
+                  type="date"
+                  th:field="*{startdate}"
+                  class="form-control"
+                  id="startdate"
+                  placeholder="Date"
+                />
+                <span
+                  th:if="${#fields.hasErrors('startdate')}"
+                  th:errors="*{startdate}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
                 <label for="enddate" class="col-form-label">End Date</label>
                 <input
                   type="date"
@@ -78,21 +92,6 @@
                 ></span>
               </div>
               <div class="form-group col-md-6">
-                <label for="modifieddate" class="col-form-label">Modified Date</label>
-                <input
-                  type="date"
-                  th:field="*{modifieddate}"
-                  class="form-control"
-                  id="modifieddate"
-                  placeholder="Date"
-                />
-                <span
-                  th:if="${#fields.hasErrors('modifieddate')}"
-                  th:errors="*{modifieddate}"
-                  class="text-danger"
-                ></span>
-              </div>
-              <div class="form-group col-md-6">
                 <label for="perassemblyqty" class="col-form-label">Per Assembly qty</label>
                 <input
                   type="number"
@@ -104,21 +103,6 @@
                 <span
                   th:if="${#fields.hasErrors('perassemblyqty')}"
                   th:errors="*{perassemblyqty}"
-                  class="text-danger"
-                ></span>
-              </div>
-              <div class="form-group col-md-6">
-                <label for="startdate" class="col-form-label">Start Date</label>
-                <input
-                  type="date"
-                  th:field="*{startdate}"
-                  class="form-control"
-                  id="startdate"
-                  placeholder="Date"
-                />
-                <span
-                  th:if="${#fields.hasErrors('startdate')}"
-                  th:errors="*{startdate}"
                   class="text-danger"
                 ></span>
               </div>
