--- a/src/main/resources/templates/billofmaterials/update-billofmaterial.html
+++ b/src/main/resources/templates/billofmaterials/update-billofmaterial.html
@@ -8,9 +8,15 @@
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" />
-    <link rel="stylesheet" href="../css/shards.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+      integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div class="container my-5">
@@ -20,110 +26,90 @@
           <form
             action="#"
             th:object="${billofmaterial}"
-            th:action="@{/billofmaterial/edit/{id}(id=${billofmaterial.billofmaterialsid})}"
+            th:action="@{/billofmaterials/edit/{id}(id=${billofmaterial.billofmaterialsid})}"
             method="post"
           >
-          <div class="row">
-            <div class="form-group col-md-6">
-              <label for="billofmaterialsid" class="col-form-label">Id</label>
-              <div></div>
-              <input
-                type="number"
-                th:field="${billofmaterialsid}"
-                class="form-control"
-                id="billofmaterialsid"
-                placeholder="0"
-              />
-              <span
-                th:if="${#fields.hasErrors('billofmaterialsid')}"
-                th:errors="*{billofmaterialsid}"
-                class="text-danger"
-              ></span>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="bomlevel" class="col-form-label">Bom Level</label>
-              <input
-                type="number"
-                th:field="*{bomlevel}"
-                class="form-control"
-                id="bomlevel"
-                placeholder="0"
-              />
-              <span
-                th:if="${#fields.hasErrors('bomlevel')}"
-                th:errors="*{bomlevel}"
-                class="text-danger"
-              ></span>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="enddate" class="col-form-label">End Date</label>
-              <input
-                type="date"
-                th:field="*{enddate}"
-                class="form-control"
-                id="enddate"
-                placeholder="Date"
-              />
-              <span
-                th:if="${#fields.hasErrors('enddate')}"
-                th:errors="*{enddate}"
-                class="text-danger"
-              ></span>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="modifieddate" class="col-form-label">Modified Date</label>
-              <input
-                type="date"
-                th:field="*{modifieddate}"
-                class="form-control"
-                id="modifieddate"
-                placeholder="Date"
-              />
-              <span
-                th:if="${#fields.hasErrors('modifieddate')}"
-                th:errors="*{modifieddate}"
-                class="text-danger"
-              ></span>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="perassemblyqty" class="col-form-label">Per Assembly qty</label>
-              <input
-                type="number"
-                th:field="*{perassemblyqty}"
-                class="form-control"
-                id="perassemblyqty"
-                placeholder="0"
-              />
-              <span
-                th:if="${#fields.hasErrors('perassemblyqty')}"
-                th:errors="*{perassemblyqty}"
-                class="text-danger"
-              ></span>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="startdate" class="col-form-label">Start Date</label>
-              <input
-                type="date"
-                th:field="*{startdate}"
-                class="form-control"
-                id="startdate"
-                placeholder="Date"
-              />
-              <span
-                th:if="${#fields.hasErrors('startdate')}"
-                th:errors="*{startdate}"
-                class="text-danger"
-              ></span>
-            </div>
+            <div class="row">
+              <div class="form-group col-md-6">
+                <label for="billofmaterialsid" class="col-form-label">Id</label>
+                <div></div>
+                <input
+                  type="number"
+                  th:field="*{billofmaterialsid}"
+                  class="form-control"
+                  id="billofmaterialsid"
+                  placeholder="0"
+                />
+                <span
+                  th:if="${#fields.hasErrors('billofmaterialsid')}"
+                  th:errors="*{billofmaterialsid}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="bomlevel" class="col-form-label">Bom Level</label>
+                <input
+                  type="number"
+                  th:field="*{bomlevel}"
+                  class="form-control"
+                  id="bomlevel"
+                  placeholder="0"
+                />
+                <span
+                  th:if="${#fields.hasErrors('bomlevel')}"
+                  th:errors="*{bomlevel}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="startdate" class="col-form-label">Start Date</label>
+                <input
+                  type="date"
+                  th:field="*{startdate}"
+                  class="form-control"
+                  id="startdate"
+                  placeholder="Date"
+                />
+                <span
+                  th:if="${#fields.hasErrors('startdate')}"
+                  th:errors="*{startdate}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="enddate" class="col-form-label">End Date</label>
+                <input
+                  type="date"
+                  th:field="*{enddate}"
+                  class="form-control"
+                  id="enddate"
+                  placeholder="Date"
+                />
+                <span
+                  th:if="${#fields.hasErrors('enddate')}"
+                  th:errors="*{enddate}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="perassemblyqty" class="col-form-label">Per Assembly qty</label>
+                <input
+                  type="number"
+                  th:field="*{perassemblyqty}"
+                  class="form-control"
+                  id="perassemblyqty"
+                  placeholder="0"
+                />
+                <span
+                  th:if="${#fields.hasErrors('perassemblyqty')}"
+                  th:errors="*{perassemblyqty}"
+                  class="text-danger"
+                ></span>
+              </div>
             </div>
             <div class="row">
               <div class="col-md-4 mt-3">
-                <input
-                  type="submit"
-                  name="action"
-                  class="btn btn-primary"
-                  value="Update"
-                />
+                <input type="submit" name="action" class="btn btn-primary" value="Update" />
               </div>
               <div class="col-md-3 mt-3">
                 <input type="reset" class="btn btn-secondary" value="Clear" />
