--- a/src/main/resources/templates/products/update-product.html
+++ b/src/main/resources/templates/products/update-product.html
@@ -8,9 +8,15 @@
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" />
-    <link rel="stylesheet" href="../css/shards.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+      integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div class="container my-5">
@@ -23,142 +29,142 @@
             th:action="@{/product/edit/{id}(id=${product.productid})}"
             method="post"
           >
-          <div class="row">
-            <div class="form-group col-md-6">
-              <label for="productreviewid" class="col-form-label">Id</label>
-              <input
-                type="number"
-                th:field="${productid}"
-                class="form-control"
-                id="productid"
-                placeholder="0"
-              />
-              <span
-                th:if="${#fields.hasErrors('productid')}"
-                th:errors="*{productid}"
-                class="text-danger"
-              ></span>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="name" class="col-form-label">Name</label>
-              <input
-                type="text"
-                th:field="*{name}"
-                class="form-control"
-                id="name"
-                placeholder="name"
-              />
-              <span
-                th:if="${#fields.hasErrors('name')}"
-                th:errors="*{name}"
-                class="text-danger"
-              ></span>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="color" class="col-form-label">Color</label>
-              <input
-                type="text"
-                th:field="*{color}"
-                class="form-control"
-                id="rating"
-                placeholder="color"
-              />
-              <span
-                th:if="${#fields.hasErrors('color')}"
-                th:errors="*{color}"
-                class="text-danger"
-              ></span>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="productline" class="col-form-label">Porduct Line</label>
-              <input
-                type="text"
-                th:field="*{productline}"
-                class="form-control"
-                id="productline"
-                placeholder="productline"
-              />
-              <span
-                th:if="${#fields.hasErrors('productline')}"
-                th:errors="*{productline}"
-                class="text-danger"
-              ></span>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="size" class="col-form-label">Size</label>
-              <input
-                type="size"
-                th:field="*{size}"
-                class="form-control"
-                id="size"
-                placeholder="size"
-              />
-              <span
-                th:if="${#fields.hasErrors('size')}"
-                th:errors="*{size}"
-                class="text-danger"
-              ></span>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="listprice" class="col-form-label">List Price</label>
-              <input
-                type="number"
-                th:field="*{listprice}"
-                class="form-control"
-                id="listprice"
-                placeholder="listprice"
-              />
-              <span
-                th:if="${#fields.hasErrors('listprice')}"
-                th:errors="*{listprice}"
-                class="text-danger"
-              ></span>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="discontinueddate" class="col-form-label">Discontinued Date</label>
-              <input
-                type="date"
-                th:field="*{discontinueddate}"
-                class="form-control"
-                id="discontinueddate"
-                placeholder="Date"
-              />
-              <span
-                th:if="${#fields.hasErrors('discontinueddate')}"
-                th:errors="*{discontinueddate}"
-                class="text-danger"
-              ></span>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="sellstartdate" class="col-form-label">Sell Start Date </label>
-              <input
-                type="date"
-                th:field="*{sellstartdate}"
-                class="form-control"
-                id="sellstartdate"
-                placeholder="Date"
-              />
-              <span
-                th:if="${#fields.hasErrors('sellstartdate')}"
-                th:errors="*{sellstartdate}"
-                class="text-danger"
-              ></span>
-            </div>
-            <div class="form-group col-md-6">
-              <label for="sellenddate" class="col-form-label">Sell End Date </label>
-              <input
-                type="date"
-                th:field="*{sellenddate}"
-                class="form-control"
-                id="sellenddate"
-                placeholder="Date"
-              />
-              <span
-                th:if="${#fields.hasErrors('sellenddate')}"
-                th:errors="*{sellenddate}"
-                class="text-danger"
-              ></span>
-            </div>
+            <div class="row">
+              <div class="form-group col-md-6">
+                <label for="productreviewid" class="col-form-label">Id</label>
+                <input
+                  type="number"
+                  th:field="${productid}"
+                  class="form-control"
+                  id="productid"
+                  placeholder="0"
+                />
+                <span
+                  th:if="${#fields.hasErrors('productid')}"
+                  th:errors="*{productid}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="name" class="col-form-label">Name</label>
+                <input
+                  type="text"
+                  th:field="*{name}"
+                  class="form-control"
+                  id="name"
+                  placeholder="name"
+                />
+                <span
+                  th:if="${#fields.hasErrors('name')}"
+                  th:errors="*{name}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="color" class="col-form-label">Color</label>
+                <input
+                  type="text"
+                  th:field="*{color}"
+                  class="form-control"
+                  id="rating"
+                  placeholder="color"
+                />
+                <span
+                  th:if="${#fields.hasErrors('color')}"
+                  th:errors="*{color}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="productline" class="col-form-label">Porduct Line</label>
+                <input
+                  type="text"
+                  th:field="*{productline}"
+                  class="form-control"
+                  id="productline"
+                  placeholder="productline"
+                />
+                <span
+                  th:if="${#fields.hasErrors('productline')}"
+                  th:errors="*{productline}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="size" class="col-form-label">Size</label>
+                <input
+                  type="size"
+                  th:field="*{size}"
+                  class="form-control"
+                  id="size"
+                  placeholder="size"
+                />
+                <span
+                  th:if="${#fields.hasErrors('size')}"
+                  th:errors="*{size}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="listprice" class="col-form-label">List Price</label>
+                <input
+                  type="number"
+                  th:field="*{listprice}"
+                  class="form-control"
+                  id="listprice"
+                  placeholder="listprice"
+                />
+                <span
+                  th:if="${#fields.hasErrors('listprice')}"
+                  th:errors="*{listprice}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="discontinueddate" class="col-form-label">Discontinued Date</label>
+                <input
+                  type="date"
+                  th:field="*{discontinueddate}"
+                  class="form-control"
+                  id="discontinueddate"
+                  placeholder="Date"
+                />
+                <span
+                  th:if="${#fields.hasErrors('discontinueddate')}"
+                  th:errors="*{discontinueddate}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="sellstartdate" class="col-form-label">Sell Start Date </label>
+                <input
+                  type="date"
+                  th:field="*{sellstartdate}"
+                  class="form-control"
+                  id="sellstartdate"
+                  placeholder="Date"
+                />
+                <span
+                  th:if="${#fields.hasErrors('sellstartdate')}"
+                  th:errors="*{sellstartdate}"
+                  class="text-danger"
+                ></span>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="sellenddate" class="col-form-label">Sell End Date </label>
+                <input
+                  type="date"
+                  th:field="*{sellenddate}"
+                  class="form-control"
+                  id="sellenddate"
+                  placeholder="Date"
+                />
+                <span
+                  th:if="${#fields.hasErrors('sellenddate')}"
+                  th:errors="*{sellenddate}"
+                  class="text-danger"
+                ></span>
+              </div>
             </div>
             <div class="row">
               <div class="col-md-4 mt-3">
